templates tasks 4 done

--- a/sem1/03.templates/src/app/app.component.html
+++ b/sem1/03.templates/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-first-task></app-first-task>
-<hr/>
-<app-second-task></app-second-task>
-<hr/>
-<app-third></app-third>
+<!--<app-first-task></app-first-task>-->
+<!--<hr/>-->
+<!--<app-second-task></app-second-task>-->
+<!--<hr/>-->
+<!--<app-third></app-third>-->
+<!--<hr/>-->
+<app-fourth></app-fourth>
