--- a/sem1/04.components/task2_3/src/app/app.component.html
+++ b/sem1/04.components/task2_3/src/app/app.component.html
@@ -7,6 +7,7 @@
 </p>
 
 <app-form
+  [preferenceOptions]="preferenceOptions"
   (submit)="add($event)"
 ></app-form>
 
@@ -15,6 +16,7 @@
 <button (click)="clear()">Clear</button>
 
 <app-list
+  [preferenceOptions]="preferenceOptions"
   (deleteClicked)="delete($event)"
   [data]="peopleInTheRoom"></app-list>
 
