--- a/sem1/04.components/task2_3/src/app/list/list.component.html
+++ b/sem1/04.components/task2_3/src/app/list/list.component.html
@@ -1,3 +1,19 @@
+
+Filter by favorite framework
+<select [(ngModel)]="filterValue">
+  <option *ngFor="let opt of preferenceOptions"
+          [value]="opt">{{ opt }}
+  </option>
+</select>
+
+
+<ol>
+  <li *ngFor="let item of data | filter:filterValue; let i = index">
+    {{ item.name }} - likes {{ item.preference }}.
+    <button (click)="delete(i)"> X</button>
+  </li>
+</ol>
+<hr/>
 <ol>
   <li *ngFor="let item of data; let i = index">
     {{ item.name }} - likes {{ item.preference }}.
