--- a/sem2/06.routingAndServices/src/app/shop/shop.component.html
+++ b/sem2/06.routingAndServices/src/app/shop/shop.component.html
@@ -4,6 +4,10 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Herbs shop</a>
 
+        <button [routerLink]="['age-verification']">
+          Exit
+        </button>
+
         <div class="card float-end" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">Cart ({{ productsInCart.length }})</h5>
