--- a/sem2/08.rxjs/src/app/shop/shop.component.html
+++ b/sem2/08.rxjs/src/app/shop/shop.component.html
@@ -16,7 +16,7 @@
       </div>
     </nav>
 
-    <div class="row">
+    <div *ngIf="(allCategories$ | async) as allCategories; else waiting" class="row">
       <div class="col-2">
         <app-category-selector
           (selected)="onCategorySelected($event)"
@@ -28,5 +28,10 @@
           [products]="productsToDisplay"></app-products-list>
       </div>
     </div>
+
+    <ng-template #waiting>
+      Loading...
+    </ng-template>
+
   </div>
 </div>
