--- a/sem2/09.advanced_routing/src/app/age-verification/age-verification.component.html
+++ b/sem2/09.advanced_routing/src/app/age-verification/age-verification.component.html
@@ -33,6 +33,22 @@
         <p *ngIf="yearModel.touched && !yearModel.valid">This is required</p>
         <!-- <p>Year errors: {{ yearModel.errors | json }}</p> -->
       </div>
+
+      <div class="mb-3">
+        <label class="form-label">Choose category</label>
+        <select
+          class="form-control"
+          name="category"
+          ngModel
+          required
+        >
+          <option *ngFor="let category of categories" [value]="category.id">
+            {{ category.name }}
+          </option>
+        </select>
+      </div>
+
+
     </div>
 
     <div class="card-footer text-muted">
