10.reactive forms warmup done

--- a/sem2/10.reactive_forms/src/app/age-verification/age-verification.component.html
+++ b/sem2/10.reactive_forms/src/app/age-verification/age-verification.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;">
-  <form #ageForm="ngForm" (submit)="verify(ageForm.form, ageElelemnt, yearElement, ageModel, yearModel)">
+  <form [formGroup]="form" (submit)="verify()">
     <div class="card-body">
       <h5 class="card-text">Age verification</h5>
       <div class="mb-3">
@@ -8,12 +8,10 @@
           type="number"
           name="age"
           class="form-control"
-          #ageElelemnt
-          #ageModel="ngModel"
-          ngModel
-          required
+          formControlName="age"
         />
-        <p *ngIf="ageModel.touched && !ageModel.valid">This is required</p>
+        <p *ngIf="ageGetter?.touched && !ageGetter?.valid">This is required</p>
+
       </div>
 
       <div class="mb-3">
@@ -21,16 +19,13 @@
         <select
           class="form-control"
           name="year"
-          #yearElement
-          #yearModel="ngModel"
-          ngModel
-          required
+          formControlName="year"
         >
           <option *ngFor="let year of years" [value]="year">
             {{ year }}
           </option>
         </select>
-        <p *ngIf="yearModel.touched && !yearModel.valid">This is required</p>
+<!--        <p *ngIf="yearModel.touched && !yearModel.valid">This is required</p>-->
         <!-- <p>Year errors: {{ yearModel.errors | json }}</p> -->
       </div>
 
@@ -39,8 +34,7 @@
         <select
           class="form-control"
           name="category"
-          ngModel
-          required
+          formControlName="category"
         >
           <option *ngFor="let category of categories" [value]="category.id">
             {{ category.name }}
@@ -52,7 +46,7 @@
     </div>
 
     <div class="card-footer text-muted">
-      <button class="btn btn-primary" [disabled]="!ageForm.valid">
+      <button class="btn btn-primary" [disabled]="!form.valid">
         Verify
       </button>
 
