--- a/sem2/11.validators_content_projection/src/app/product/product.component.html
+++ b/sem2/11.validators_content_projection/src/app/product/product.component.html
@@ -6,9 +6,7 @@
   </div>
   <div class="card-footer text-muted">
 
-    <button (click)="addToCart.emit()">
-      Add to cart
-    </button>
+    <ng-content></ng-content>
 
   </div>
 </div>
