--- a/sem2/11.validators_content_projection/src/app/shop/products-list/products-list.component.html
+++ b/sem2/11.validators_content_projection/src/app/shop/products-list/products-list.component.html
@@ -14,8 +14,13 @@
   <div class="row pt-5">
 
       <app-product *ngFor="let product of products | sort:'price':sortDirection"
-                   (addToCart)="addToCart(product)"
                    [data]="product">
+
+        <button (click)="addToCart(product)">
+          Add to cart
+        </button>
+
+
       </app-product>
 
   </div>
