--- a/sem2/11.validators_content_projection/src/app/age-verification/age-verification.component.html
+++ b/sem2/11.validators_content_projection/src/app/age-verification/age-verification.component.html
@@ -45,6 +45,10 @@
 
     </div>
 
+    <p *ngIf="form.errors?.['ageYearNoMatch']">
+      Year and age do not match!
+    </p>
+
     <div class="card-footer text-muted">
       <button class="btn btn-primary" [disabled]="!form.valid">
         Verify
